// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Pruebas con <SearchScreen />  Debe de mostrarse con los valores por defecto correctamente  1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <h4>
         SearchForm 
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <label>
           Find your Hero 
        </label>
        <input
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Hero"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-8"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        <p
          className="textinfo"
        >
           Search a Hero 
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[` Pruebas con <SearchScreen />  Debe mostrar un error si no encuntran al heroe  1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <h4>
         SearchForm 
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <label>
           Find your Hero 
        </label>
        <input
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Hero"
          type="text"
          value="batman123"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-8"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-danger"
      >
        <p
          className="textdanger"
        >
           There is no a Hero 
          batman123
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[` Pruebas con <SearchScreen />  debe de mostrar a Batman y el input con el valor del QueryString   1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <h4>
         SearchForm 
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <label>
           Find your Hero 
        </label>
        <input
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Hero"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-8"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className=" card ms-3  animate__animated animate__fadeIn "
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row no-gutters "
        >
          <div
            className="col-md-4"
          >
            <img
              alt="Batman"
              className="card-img"
              src="./assets/img/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                 
                Batman
                 
              </h5>
              <p
                className="card-text"
              >
                 
                Bruce Wayne
                 
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                   
                  Detective Comics #27
                   
                </small>
              </p>
              <a
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                 Saber mas... 
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
